--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <script src="/index.js"></script>
 </head>
 <body>
     <section id="background">
         <header>
-            <a href="/index.html"><img id="logo" src="/images/logo.png" alt="Logo"></a>
+            <a href="/index.html"><img id="logo" src="./images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
                     <li><a href="/index.html">Campanha</a></li>
