--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <script src="/index.js"></script>
 </head>
 <body>
     <section id="background">
         <header>
-            <a href="/index.html"><img id="logo" src="/images/logo.png" alt="Logo"></a>
+            <a href="/index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
                     <li><a href="/index.html">Campanha</a></li>
-                    <li><a href="sobre.html" class="active"><img src="/images/sobre.png" alt="Sobre"></a></li>
+                    <li><a href="sobre.html" class="active"><img src="../images/sobre.png" alt="Sobre"></a></li>
                     <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
                 </ul>
             </div>
@@ -24,8 +24,8 @@
         <div class="carrosselBox">
           <h2>#####</h2>
         <div class="carrossel">
-          <img onload="carousel()" class="mySlides" src="/images/pringlesRoxa.png">
-          <img class="mySlides" src="/images/stardrop.png">
+          <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
+          <img class="mySlides" src="../images/stardrop.png">
         </div>
         </div>
     </section>
