--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -10,19 +10,19 @@
 <body>
     <section id="background">
         <header>
-            <a href="/index.html"><img id="logo" src="./images/logo.png" alt="Logo"></a>
+            <a href="/index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
-                    <li><a href="/index.html">Campanha</a></li>
+                    <li><a href="../index.html">Campanha</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="desenvolvedores.html"  class="active"><img src="/images/desenvolvedores.png" alt="Sobre"></a></li>
                 </ul>
             </div>
         </header>
         <h1>Desenvolvedores</h1>
-        <img src="/images/user.png" alt="" class="imgDev">
+        <img src="../images/user.png" alt="" class="imgDev">
         <p class="transparentBox" id="historia">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptas nesciunt rerum sequi</p>
-        <img src="/images/user.png" alt="" class="imgDev">
+        <img src="../images/user.png" alt="" class="imgDev">
         <p class="transparentBox" id="historia">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat mollitia explicabo doloribus quibusdam</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus hic pariatur fugit, eius aliquam dolorem perferendis veritatis rem suscipit, repellendus accusamus vel officiis odio voluptatem cum minima id nobis error!</p>
     </section>
