--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -13,7 +13,7 @@
             <a href="/index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
-                    <li><a href="/index.html">Campanha</a></li>
+                    <li><a href="../index.html">Campanha</a></li>
                     <li><a href="sobre.html" class="active"><img src="../images/sobre.png" alt="Sobre"></a></li>
                     <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
                 </ul>
@@ -24,8 +24,8 @@
         <div class="carrosselBox">
           <h2>#####</h2>
         <div class="carrossel">
-          <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
-          <img class="mySlides" src="../images/stardrop.png">
+          <img onload="carousel()" class="mySlides" src="./images/pringlesRoxa.png">
+          <img class="mySlides" src="./images/stardrop.png">
         </div>
         </div>
     </section>
