--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -13,9 +13,9 @@
             <a href="/index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
-                    <li><a href="../index.html">Campanha</a></li>
+                    <li><a href="/index.html">Campanha</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="desenvolvedores.html"  class="active"><img src="/images/desenvolvedores.png" alt="Sobre"></a></li>
+                    <li><a href="desenvolvedores.html"  class="active"><img src="../images/desenvolvedores.png" alt="Sobre"></a></li>
                 </ul>
             </div>
         </header>
