--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="../index.css">
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <section id="background">
         <header>
-            <a href="/index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
+            <a href="../index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
                 <ul class="menu">
-                    <li><a href="/index.html">Campanha</a></li>
+                    <li><a href="../index.html">Campanha</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="desenvolvedores.html"  class="active"><img src="../images/desenvolvedores.png" alt="Sobre"></a></li>
                 </ul>
