teste imagem de fundo 3

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="carrosselBox">
           <h2>#####</h2>
         <div class="carrossel">
-          <img onload="carousel()" class="mySlides" src="/images/pringlesRoxa.png">
-          <img class="mySlides" src="/images/stardrop.png">
+          <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
+          <img class="mySlides" src="../images/stardrop.png">
         </div>
         </div>
     </section>
