--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="../styles/index.css">
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
 </head>
 <body>
     <section id="background">
@@ -22,9 +22,7 @@
         <h1>Desenvolvedores</h1>
         <img src="../images/user.png" alt="" class="imgDev">
         <p class="transparentBox" id="historia">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptas nesciunt rerum sequi</p>
-        <img src="../images/user.png" alt="" class="imgDev">
-        <p class="transparentBox" id="historia">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat mollitia explicabo doloribus quibusdam</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus hic pariatur fugit, eius aliquam dolorem perferendis veritatis rem suscipit, repellendus accusamus vel officiis odio voluptatem cum minima id nobis error!</p>
+        <img src="../images/user.png" alt="" class="imgDev">|
     </section>
 </body>
 </html>
