--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="../styles/index.css">
-    <script src="/index.js"></script>
+    <script src="../index.js"></script>
 </head>
 <body>
     <section id="background">
