fonte, texto, batata atualizada e logo atualizado

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="fonts/font.css">
     <script src="index.js"></script>
 </head>
 <body>
-    <section id="background">
+    <div id="background">
         <header>
             <a href="index.html"><img id="logo" src="images/logo.png" alt="Logo"></a>
             <div id="nav">
@@ -20,14 +21,18 @@
             </div>
         </header>
         <h1>Parceria</h1>
-        <p class="transparentBox" id="historia">Pringles e Stardew Valley se uniram para lançar o sabor Pringles Stardew Harvest, inspirado nos frescos sabores do campo. Com um toque de batatas assadas, ervas e queijo, essa edição limitada traz o clima acolhedor de Pelican Town para cada mordida. Aproveite o sabor da fazenda enquanto explora o mundo de Stardew Valley!</p>
+        <p class="transparentBox" id="historia">Pringles e Stardew Valley se unem em uma parceria inovadora!<br>Você já imaginou capturar o sabor da nostalgia e da felicidade em uma única batata chip? Inspirados pela magia de Stardew Valley, a Pringles apresenta o novo sabor: Fruta Estrela!<br>No jogo, a Fruta Estrela é um presente especial que evoca lembranças queridas. Agora, essa experiência mágica chega aos seus sentidos com o sabor único da Pringles Fruta Estrela.</p>
+    </div>
+    <div id="secao2">
         <div class="carrosselBox">
-          <h2>#####</h2>
-        <div class="carrossel">
-          <img onload="carousel()" class="mySlides" src="images/pringlesRoxa.png">
-          <img class="mySlides" src="images/stardrop.png">
-        </div>
-        </div>
-    </section>
+            <h2>Nova Pringles Sabor Fruta Estrela</h2>
+          <div class="carrossel">
+            <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
+            <img class="mySlides" src="../images/stardrop.png">
+          </div>
+          <p class="transparentBox" id="historia">Com notas doces e um toque de mistério, essa batata chip é um convite para revisitarmos nossas memórias favoritas. A parceria Pringles x Stardew Valley celebra a conexão entre sabores, lembranças e a vida simples no campo.<br>Desfrute do sabor da nostalgia com Pringles Fruta Estrela e reviva suas memórias favoritas em Stardew Valley!
+        </p>
+          </div>
+    </div>
 </body>
 </html>
