--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../fonts/font.css">
     <script src="../index.js"></script>
 </head>
 <body>
-    <section id="background">
+    <div id="background">
         <header>
             <a href="../index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
@@ -23,6 +24,6 @@
         <img src="../images/user.png" alt="" class="imgDev">
         <p class="transparentBox" id="historia">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptas nesciunt rerum sequi</p>
         <img src="../images/user.png" alt="" class="imgDev">|
-    </section>
+    </div>
 </body>
 </html>
