--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StardewPringles</title>
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../fonts/font.css">
     <script src="../index.js"></script>
 </head>
 <body>
-    <section id="background">
+    <div id="background">
         <header>
             <a href="../index.html"><img id="logo" src="../images/logo.png" alt="Logo"></a>
             <div id="nav">
@@ -19,15 +20,18 @@
                 </ul>
             </div>
         </header>
-        <h1>Parceria</h1>
+        <h1>Pringles</h1>
         <p class="transparentBox" id="historia">Pringles e Stardew Valley se uniram para lançar o sabor Pringles Stardew Harvest, inspirado nos frescos sabores do campo. Com um toque de batatas assadas, ervas e queijo, essa edição limitada traz o clima acolhedor de Pelican Town para cada mordida. Aproveite o sabor da fazenda enquanto explora o mundo de Stardew Valley!</p>
+        
+    </div>
+    <div>
         <div class="carrosselBox">
-          <h2>#####</h2>
-        <div class="carrossel">
-          <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
-          <img class="mySlides" src="../images/stardrop.png">
-        </div>
-        </div>
-    </section>
+            <h2>#####</h2>
+          <div class="carrossel">
+            <img onload="carousel()" class="mySlides" src="../images/pringlesRoxa.png">
+            <img class="mySlides" src="../images/stardrop.png">
+          </div>
+          </div>
+    </div>
 </body>
 </html>
