ajustes de altura e sobreposição de elementos

--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -24,6 +24,7 @@
         <img src="../images/user.png" alt="" class="imgDev">
         <p class="transparentBox" id="historia">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptas nesciunt rerum sequi</p>
         <img src="../images/user.png" alt="" class="imgDev">|
+        <p class="transparentBox" id="historia">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste voluptas nesciunt rerum sequi</p>
     </div>
 </body>
 </html>
