url imagem index

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="textbox"></div>
             <p id="historia">Pringles e Stardew Valley se unem em uma parceria inovadora!<br>Você já imaginou capturar o sabor da nostalgia e da felicidade em uma única batata chip? Inspirados pela magia de Stardew Valley, a Pringles apresenta o novo sabor: Fruta Estrela!<br>No jogo, a Fruta Estrela é um presente especial que evoca lembranças queridas. Agora, essa experiência mágica chega aos seus sentidos com o sabor único da Pringles Fruta Estrela.</p>
         </div>
-        <img  class="imgIndex" src="../images/pringlesRoxa.png">
+        <img  class="imgIndex" src="images/pringlesRoxa.png">
     </div>
     <div id="secao2">
         <h2>Nova Pringles Sabor Fruta Estrela</h2>
-        <img class="imgIndex" src="../images/stardrop.png">
+        <img class="imgIndex" src="images/stardrop.png">
         <p id="historia">Com notas doces e um toque de mistério, essa batata chip é um convite para revisitarmos nossas memórias favoritas. A parceria Pringles x Stardew Valley celebra a conexão entre sabores, lembranças e a vida simples no campo.<br>Desfrute do sabor da nostalgia com Pringles Fruta Estrela e reviva suas memórias favoritas em Stardew Valley!
         </p>
     </div>
