--- a/index.html
+++ b/index.html
@@ -20,16 +20,30 @@
             </div>
         </header>
         <h1>Parceria</h1>
-        <div class="textbox"></div>
             <p id="historia">Pringles e Stardew Valley se unem em uma parceria inovadora!<br>Você já imaginou capturar o sabor da nostalgia e da felicidade em uma única batata chip? Inspirados pela magia de Stardew Valley, a Pringles apresenta o novo sabor: Fruta Estrela!<br>No jogo, a Fruta Estrela é um presente especial que evoca lembranças queridas. Agora, essa experiência mágica chega aos seus sentidos com o sabor único da Pringles Fruta Estrela.</p>
-        </div>
-        <img  class="imgIndex" src="images/pringlesRoxa.png">
-    </div>
+            <img class="imgIndex" src="images/stardrop.png">
+    </div>    
     <div id="secao2">
         <h2>Nova Pringles Sabor Fruta Estrela</h2>
-        <img class="imgIndex" src="images/stardrop.png">
+        <div id="starBatataStar">
+            <img class="imgIndex" src="images/stardrop.png">
+            <img  class="imgIndex" src="images/pringlesRoxa.png">
+            <img class="imgIndex" src="images/stardrop.png">
+        </div>
         <p id="historia">Com notas doces e um toque de mistério, essa batata chip é um convite para revisitarmos nossas memórias favoritas. A parceria Pringles x Stardew Valley celebra a conexão entre sabores, lembranças e a vida simples no campo.<br>Desfrute do sabor da nostalgia com Pringles Fruta Estrela e reviva suas memórias favoritas em Stardew Valley!
         </p>
     </div>
+    <footer>
+        <div class = "footer-section">
+            <h1>aaaa</h1>
+        </div>
+        <div id = "map">   
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d16581.996602208375!2d-46.6945052!3d-23.6303691!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50e958e1d9db%3A0xf877759c4e52a9ad!2sUNIP%20-%20Ch%C3%A1cara%20Santo%20Ant%C3%B4nio%20Campus%20III!5e1!3m2!1spt-BR!2sbr!4v1731969595285!5m2!1spt-BR!2sbr" width="100%" height="200px" style="" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class = "footer-section">
+            <a href=""><img class="redes" src="images/insta_logo.png" alt="instagram"></a>
+            <a href=""><img class="redes" src="images/x_logo.png" alt="X"></a>
+        </div>
+    </footer>
 </body>
 </html>
