--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -22,7 +22,18 @@
         </header>
         <h1>Pringles</h1>
         <p class="transparentBox" id="historia">Pringles e Stardew Valley se uniram para lançar o sabor Pringles Stardew Harvest, inspirado nos frescos sabores do campo. Com um toque de batatas assadas, ervas e queijo, essa edição limitada traz o clima acolhedor de Pelican Town para cada mordida. Aproveite o sabor da fazenda enquanto explora o mundo de Stardew Valley!</p>
-        
     </div>
+    <footer>
+        <div class = "footer-section">
+            <h1>aaaa</h1>
+        </div>
+        <div id = "map">   
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d16581.996602208375!2d-46.6945052!3d-23.6303691!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50e958e1d9db%3A0xf877759c4e52a9ad!2sUNIP%20-%20Ch%C3%A1cara%20Santo%20Ant%C3%B4nio%20Campus%20III!5e1!3m2!1spt-BR!2sbr!4v1731969595285!5m2!1spt-BR!2sbr" width="100%" height="200px" style="" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class = "footer-section">
+            <a href=""><img class="redes" src="../images/insta_logo.png" alt="instagram"></a>
+            <a href=""><img class="redes" src="../images/x_logo.png" alt="X"></a>
+        </div>
+    </footer>
 </body>
 </html>
