alinhamentos e espaços desenvolvedores

--- a/subpags/desenvolvedores.html
+++ b/subpags/desenvolvedores.html
@@ -21,10 +21,15 @@
             </div>
         </header>
         <h1>Desenvolvedores</h1>
-        <img src="../images/dylan.jpeg" alt="" class="imgDev">
-        <p id="historia">Dylan Ferreira Rodgher RA: N410280 4° Semestre</p>
-        <img src="../images/lucas.jpeg" alt="" class="imgDev">|
-        <p id="historia">Lucas de Lima Andrade RA: R002DF8 3° Semestre</p>
+
+        <div class="caixaDev">
+            <img src="../images/dylan.jpeg" alt="" class="imgDev">
+            <p id="historia">Dylan Ferreira Rodgher<br>RA: N410280<br>4° Semestre</p>
+        </div>
+        <div  class="caixaDev">
+            <img src="../images/lucas.jpeg" alt="" class="imgDev">
+            <p id="historia">Lucas de Lima Andrade<br>RA: R002DF8<br>3° Semestre</p>
+        </div>
     </div>
     <footer>
         <div class = "footer-section">
