--- a/subpags/sobre.html
+++ b/subpags/sobre.html
@@ -21,18 +21,21 @@
             </div>
         </header>
         <h1>Pringles</h1>
-        <p class="transparentBox" id="historia">Pringles e Stardew Valley se uniram para lançar o sabor Pringles Stardew Harvest, inspirado nos frescos sabores do campo. Com um toque de batatas assadas, ervas e queijo, essa edição limitada traz o clima acolhedor de Pelican Town para cada mordida. Aproveite o sabor da fazenda enquanto explora o mundo de Stardew Valley!</p>
+        <p class="transparentBox" id="historia"> Pringles é uma marca líder no mercado de batatas chips, conhecida por sua inovação e qualidade. Fundada em 1968 por Fredric Baur, a Pringles revolucionou a indústria de snacks com sua tecnologia única de fabricação, que permite criar batatas chips uniformes e deliciosas.<br>A Pringles expandiu sua presença global, disponível em mais de 140 países. Além disso, a marca é conhecida por suas parcerias criativas, como a recente colaboração com Stardew Valley.<br>A Pringles continua inovando, oferecendo experiências únicas aos consumidores. Com sua combinação de qualidade, variedade e inovação, a Pringles permanece uma das marcas de snacks mais amadas mundialmente. E agora está trazendo para vocês um novo sabor.</p>
+        <h1>Stardew Valley</h2>
+        <p id="historia">Stardew Valley é um jogo de simulação rural criado por ConcernedApe e publicado pela Chucklefish. Lançado em 2016, tornou-se um clássico instantâneo entre os jogadores.<br>Você herda uma fazenda abandonada em Stardew Valley, uma cidade rural tranquila. Seu objetivo é restaurar a fazenda à sua antiga glória, cultivando frutas, vegetais e flores, criando animais e explorando as profundezas da mineração.A comunidade de Stardew Valley é ativa e criativa, com milhares de jogadores
+        </p>
     </div>
     <footer>
         <div class = "footer-section">
-            <h1>aaaa</h1>
+            <img id="unip" src="../images/unip.png" alt="">
         </div>
         <div id = "map">   
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d16581.996602208375!2d-46.6945052!3d-23.6303691!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50e958e1d9db%3A0xf877759c4e52a9ad!2sUNIP%20-%20Ch%C3%A1cara%20Santo%20Ant%C3%B4nio%20Campus%20III!5e1!3m2!1spt-BR!2sbr!4v1731969595285!5m2!1spt-BR!2sbr" width="100%" height="200px" style="" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class = "footer-section">
-            <a href=""><img class="redes" src="../images/insta_logo.png" alt="instagram"></a>
-            <a href=""><img class="redes" src="../images/x_logo.png" alt="X"></a>
+            <a href="https://www.instagram.com/l.felxmay?igsh=MzkwMGkwNzZmN2Y4"><img class="redes" src="../images/insta_logo.png" alt="instagram"></a>
+            <a href="https://x.com/coisadeartistas"><img class="redes" src="../images/x_logo.png" alt="X"></a>
         </div>
     </footer>
 </body>
